--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -54,7 +54,7 @@
 
 
   <div class="row formbuttons">
-    <div class="col-md-offset-5 col-xs-3 col-sm-2 col-md-1 col-lg-1">
+    <div class="col-xs-offset-2 col-md-offset-5 col-xs-4 col-sm-2 col-md-1 col-lg-1">
       <button type="submit" class="btn btn-primary"
         (click)="reportsform(reportsformdata,reportsformdata.form.valid)">Submit</button>
     </div>
@@ -73,7 +73,7 @@
 
       <h3 class="text-primary text-center" style="margin-top: 20px;padding-bottom: 11px;border-bottom: 1px solid;margin-left: 20px;margin-right: 20px;">Entries</h3>
 
-      <div class="form-group form-inline col-md-3">
+      <div class="form-group form-inline col-xs-offset-3 col-md-3">
 
         <button type="button" class="btn btn-info" (click)="Gettodayrecords()">Today Entries</button>
 
