Updated design and code

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,6 +6,10 @@
     }
 }
 
+.navbar {
+    margin-bottom: 8px !important;
+}
+
 /* Overwrite Css */
 
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
