--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -4,25 +4,22 @@
 
     <h3 class="text-primary text-center" style="margin-top: 0px;padding-bottom: 10px;border-bottom: 1px solid;">Reports Form</h3>
 
-    <br>
-
     <form #reportsformdata="ngForm">
 
-      <div class="form-group col-md-3">
+      <div class="form-group col-md-2">
         <label for="projectname">Project Name</label>
-        <input type="text" autocomplete="off" id="projectname" class="form-control inputreset"
-          placeholder="Project Name" list="projname" name="Projectname">
-        <datalist id="projname">
+        <!-- <input type="text" autocomplete="off" placeholder="Project Name"  > -->
+        <select id="projname" id="projectname" class="form-control">
           <option *ngFor="let data of projectnames">{{data.ProjectName}}</option>
-        </datalist>
+        </select>
       </div>
 
-      <div class="form-group col-md-3">
+      <div class="form-group col-md-2">
         <label for="module">Module</label>
         <input type="text" class="form-control" id="module" name="Module" placeholder="Module">
       </div>
 
-      <div class="form-group col-md-3">
+      <div class="form-group col-md-2">
         <label for="From date"> From date</label>
         <div class="input-append date">
           <input class="form-control datepicker" name="Fromdate" id="fromdate" placeholder="From date" size="16"
@@ -31,7 +28,7 @@
 
       </div>
 
-      <div class="form-group col-md-3">
+      <div class="form-group col-md-2">
         <label for="todate"> To date</label>
         <div class="input-append date">
           <input class="form-control datepicker" id="todate" name="Todate" placeholder="To date" size="16"
@@ -39,13 +36,23 @@
         </div>
       </div>
 
-      <div class="form-group col-md-3">
-        <label for="employeename">Employee Name</label>
+      <div class="form-group col-md-2">
+        <label for="employeename">Name</label>
         <input type="text" autocomplete="off" id="employeename" name="Employername" class="form-control inputreset"
           placeholder="Employer Name" list="empname">
         <datalist id="empname">
           <option *ngFor="let data of employernames">{{data.EmployeeName}}</option>
         </datalist>
+      </div>
+
+      <div *ngIf="reportslength" class="form-group col-xs-12 col-md-2">
+        <label for="Pagelist" style="margin-right: 10px;">Filter Pages</label>
+        <select class="form-control" name="pages" [(ngModel)]="selectpages"
+          (change)="pagesitemschange($event.target.value)" ngModel>
+          <option value="10">10</option>
+          <option value="50">50</option>
+          <option value="100">100</option>
+        </select>
       </div>
 
     </form>
@@ -54,13 +61,21 @@
 
 
   <div class="row formbuttons">
-    <div class="col-xs-offset-2 col-md-offset-5 col-xs-4 col-sm-2 col-md-1 col-lg-1">
+    <div class="col-xs-offset-2 col-md-offset-4 col-xs-4 col-sm-2 col-md-1 col-lg-1">
       <button type="submit" class="btn btn-primary"
         (click)="reportsform(reportsformdata,reportsformdata.form.valid)">Submit</button>
     </div>
 
-    <div class="col-xs-3 col-sm-2 col-md-1 col-lg-3">
+    <div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
       <button type="reset" class="btn btn-warning" (click)="clearreportsform()">Reset</button>
+    </div>
+
+    <div *ngIf="reportslength" class="form-group form-inline col-md-1">
+        <input type="button" class="btn btn-success" (click)="downloadpdf()" value="Export" />
+    </div>
+
+    <div class="form-group form-inline col-md-2">
+      <button type="button" class="btn btn-info" (click)="Gettodayrecords()">Today Entries</button>
     </div>
 
   </div>
@@ -71,30 +86,8 @@
 
     <div class="row" style="background-color: #f1f1f6;">
 
-      <h3 class="text-primary text-center" style="margin-top: 20px;padding-bottom: 11px;border-bottom: 1px solid;margin-left: 20px;margin-right: 20px;">Entries</h3>
-
-      <div class="form-group form-inline col-md-3">
-
-        <button type="button" class="btn btn-info" (click)="Gettodayrecords()">Today Entries</button>
-
-      </div>
-
-      <div *ngIf="reportslength" class="form-group form-inline col-xs-12 col-md-3" style="float: right;">
-        <label for="Pagelist" style="margin-right: 10px;">Filter Pages</label>
-        <select class="form-control" style="width: 70%;" name="pages" [(ngModel)]="selectpages"
-          (change)="pagesitemschange($event.target.value)" ngModel>
-          <option value="10">10</option>
-          <option value="50">50</option>
-          <option value="100">100</option>
-        </select>
-      </div>
-
-
-      <br>
-      <br>
-
       <div style="overflow-x: scroll;width: 100%;" id="content" #content >
-<br>
+
         <div *ngIf="!reportslength" class="text-center" style="padding: 14px;background: #4d5092;color: antiquewhite;
         box-shadow: 0px 3px 2px #aab2bd;">
           <span>No Records Found</span>
@@ -104,7 +97,7 @@
 
           <table id="reporttable" class="table table-responsive table-bordered table-striped table-hover">
             <thead>
-              <tr>
+              <tr style="font-size: 13px;">
                 <th class="header1" scope="col" (click)="sort('ProjectName')">Project Name
                   <span class="glyphicon sort-icon" *ngIf="key =='ProjectName'"
                     [ngClass]="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
@@ -139,7 +132,7 @@
                 <tr>
                     <td></td>
                     <td style="color: blue;">No of Days</td>
-                    <td style="color: red;">{{noofdaysworked}}</td>
+                    <td style="color: red;">{{totaldays}}</td>
                     <td></td>
                     <td style="color: blue;">Total Hours</td>
                     <td style="color: red;">{{totalhours}}</td>
@@ -153,16 +146,10 @@
       </div>
 
       <div class="col-md-12 divpagination" *ngIf="reportslength" style="background-color: #7173a8;">
-        <pagination-controls class="pagination-class" style="float: right;margin-top: 8px;" id="listing_pagination" maxSize="5"
+        <pagination-controls class="pagination-class" style="float: right;margin-top: 5px;" id="listing_pagination" maxSize="5"
           directionLinks="true" (pageChange)="page = $event">
         </pagination-controls>
       </div>
-
-      <div *ngIf="reportslength" class="form-group form-inline col-md-offset-5 col-md-1">
-        <br>
-        <input type="button" class="btn btn-success" (click)="downloadpdf()" value="Export" />
-      </div>
-
     </div>
   </form>
 
