--- a/src/app/report/report.component.css
+++ b/src/app/report/report.component.css
@@ -17,6 +17,15 @@ width: 10%;
 
 }
 
+.table>thead>tr>th {
+    padding: 5px !important;
+}
+
+.table {
+    width: 87%;
+    margin-left: 6%;
+}
+
 .header1{
     text-align: center;
 }
@@ -44,9 +53,18 @@ width: 10%;
     padding-bottom: 10px;
 }
 
+.select2-container .select2-selection--single{
+    height: 31px !important;
+}
+
+.ngx-pagination {
+    padding: 0px !important;
+    margin-bottom: 7px !important;
+}
+
 .formbuttons{
     background-color: #f1f1f6;
-    padding-bottom: 14px;
+    padding-bottom: 7px;
 }
 @media screen and (min-device-width: 320px) and (max-device-width: 1023px) {
 .pagination-class{
@@ -70,12 +88,12 @@ thead{
 }
 
 .form-group {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 hr {
-    margin-top: 17px;
-    margin-bottom: 17px;
+    margin-top: 6px;
+    margin-bottom: 6px;
     border: 0;
     border-top: 1px solid #e4e2e2;
 }
