--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -77,16 +77,16 @@
     </div>
 
     <div class="col-xs-4 col-sm-2 col-md-1 col-lg-1">
-      <button type="reset" class="btn btn-warning" (click)="clearreportsform()">Reset</button>
+      <button type="reset" class="btn btn-warning" (click)="clearreportsform()">Clear</button>
     </div>
 
-    <div *ngIf="reportslength" class="form-group form-inline col-md-1">
-        <input type="button" class="btn btn-success" (click)="downloadpdf()" value="Export" />
-    </div>
-
-    <div class="form-group form-inline col-xs-offset-3 col-lg-offset-0 col-md-2">
+    <div *ngIf="reportslength" class="form-group form-inline col-md-2" style="width: 11%;">
       <button type="button" class="btn btn-info" (click)="Gettodayrecords()">Today Entries</button>
     </div>
+
+    <div *ngIf="reportslength" class="form-group form-inline col-xs-offset-3 col-lg-offset-0 col-md-2">
+      <input type="button" class="btn btn-success" (click)="downloadpdf()" value="Export" />
+  </div>
 
   </div>
 
