--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -46,7 +46,7 @@
       <div class="form-group col-md-2">
         <label for="empname">Name</label>
         <input type="text" autocomplete="off" 
-          placeholder="Employer Name" id="employeename" (click)="modulefilter3()" list="empname" class="form-control">
+          placeholder="Name" id="employeename" (click)="modulefilter3()" list="empname" class="form-control">
         <datalist id="empname" name="Employername">
             <option value="">Please select</option>
           <option *ngFor="let data of employernames">{{data.EmployeeName}}</option>
@@ -80,8 +80,8 @@
       <button type="reset" class="btn btn-warning" (click)="clearreportsform()">Clear</button>
     </div>
 
-    <div *ngIf="reportslength" class="form-group form-inline col-md-2" style="width: 11%;">
-      <button type="button" class="btn btn-info" (click)="Gettodayrecords()">Today Entries</button>
+    <div *ngIf="reportslength" class="form-group form-inline col-md-1">
+      <button type="button" class="btn btn-info" (click)="Gettodayrecords()">Today</button>
     </div>
 
     <div *ngIf="reportslength" class="form-group form-inline col-xs-offset-3 col-lg-offset-0 col-md-2">
