--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid" style="padding: 33px;padding-top: 0px;">
+<div class="container-fluid" style="padding: 68px;padding-top: 0px;">
 
-  <div class="row form">
+  <div class="col-md-offset-0 col-md-12 row form">
 
     <h3 class="text-primary text-center" style="margin-top: 0px;padding-bottom: 10px;font-weight:700;border-bottom: 1px solid;">Reports Form</h3>
 
@@ -70,7 +70,7 @@
   </div>
 
 
-  <div class="row formbuttons">
+  <div class="col-md-offset-0 col-md-12 row formbuttons">
     <div class="col-xs-offset-0 col-md-offset-4 col-xs-4 col-sm-2 col-md-1 col-lg-1">
       <button type="submit" class="btn btn-primary"
         (click)="reportsform(reportsformdata,reportsformdata.form.valid)">Submit</button>
@@ -94,7 +94,7 @@
 
   <form>
 
-    <div class="row" style="background-color: #f1f1f6;">
+    <div class="row" style="background-color: #e4e4ef;background-color: #e4e4ef;border-radius: 3px;">
 
       <div style="overflow-x: scroll;width: 100%;" id="content" #content >
 
@@ -103,9 +103,9 @@
           <span>No Records Found</span>
         </div>
 
-        <div class="col-md-12" *ngIf="reportslength" style="display: block;overflow:auto;height: 621px;width:100%;">
+        <div class="col-md-12 tablestyle" *ngIf="reportslength">
 
-          <table id="reporttable" class="table table-responsive table-bordered table-striped table-hover">
+          <table id="reporttable" class="table table-responsive table-bordered table-hover">
             <thead>
               <tr style="font-size: 13px;">
                 <th class="header1" scope="col" (click)="sort('ProjectName')">Project Name
