--- a/src/app/report/report.component.css
+++ b/src/app/report/report.component.css
@@ -22,8 +22,9 @@ width: 11%;
 }
 
 .table {
-    width: 90%;
-    margin-left: 5%;
+    width: 100%;
+    background-color: white;
+    /* margin-left: 5%; */
 }
 
 .header1{
@@ -47,10 +48,10 @@ width: 11%;
 }
 
 .form{
-    background-color: #f1f1f6;
-    padding: 72px;
-    padding-top: 12px;
-    padding-bottom: 10px;
+    background-color: #ffffff;
+    border-radius: 3px;
+    margin-top: 23px;
+    padding: 10px;
 }
 
 .select2-container .select2-selection--single{
@@ -62,9 +63,18 @@ width: 11%;
     margin-bottom: 7px !important;
 }
 
+.tablestyle{
+    display: block;
+    overflow:auto;
+    width:100%;
+    margin-top: 16px;
+    border-radius: 3px;
+}
+
 .formbuttons{
-    background-color: #f1f1f6;
+    background-color: #ffffff;
     padding-bottom: 7px;
+    border-radius: 3px
 }
 @media screen and (min-device-width: 320px) and (max-device-width: 1023px) {
 .pagination-class{
