--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="padding: 68px;padding-top: 0px;">
+<div class="container-fluid mystylecontainer" style="padding: 68px;padding-top: 0px;">
 
   <div class="col-md-offset-0 col-md-12 row form">
 
