--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -94,7 +94,7 @@
 
   <form>
 
-    <div class="row" style="background-color: #e4e4ef;background-color: #e4e4ef;border-radius: 3px;">
+    <div class="row" style="background-color: #e4e4ef;background-color: #d1d1e8;border-radius: 3px;">
 
       <div style="overflow-x: scroll;width: 100%;" id="content" #content >
 
