--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -18,7 +18,7 @@
       <div class="form-group col-md-2">
         <label for="module">Module</label>
         <!-- <input type="text" class="form-control" id="module" name="Module" placeholder="Module"> -->
-        <input type="text" autocomplete="off" class="form-control" name="modulename" (click)="modulefilter2()" id="module" placeholder="Project Name" list="datamodule" ngModel>
+        <input type="text" autocomplete="off" class="form-control" name="modulename" (click)="modulefilter2()" id="module" placeholder="Module" list="datamodule" ngModel>
 
         <datalist id="datamodule">
           <option value="">Please select</option>
