--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -29,7 +29,7 @@
       <div class="form-group col-md-2">
         <label for="From date"> From date</label>
         <div class="input-append date">
-          <input class="form-control datepicker" name="Fromdate" id="fromdate" placeholder="From date" size="16"
+          <input class="form-control datepicker" autocomplete="off" name="Fromdate" id="fromdate" placeholder="From date" size="16"
             type="text" />
         </div>
 
@@ -38,7 +38,7 @@
       <div class="form-group col-md-2">
         <label for="todate"> To date</label>
         <div class="input-append date">
-          <input class="form-control datepicker" id="todate" name="Todate" placeholder="To date" size="16"
+          <input class="form-control datepicker" autocomplete="off" id="todate" name="Todate" placeholder="To date" size="16"
             type="text" />
         </div>
       </div>
@@ -85,7 +85,7 @@
     </div>
 
     <div class="form-group form-inline col-xs-offset-3 col-lg-offset-0 col-md-2">
-      <input type="button" class="btn btn-success" (click)="downloadpdf()" value="Export" />
+      <a class="btn btn-success" (click)="callreports()" [ngClass]="{'exportclass disabled': !reportslength === true}" >Export</a>
   </div>
 
   </div>
@@ -132,7 +132,7 @@
           totalItems: totalRec }">
                 <td>{{obj.ProjectName}}</td>
                 <td>{{obj.Module}}</td>
-                <td>{{obj.WorkingDate | date: 'dd-MM-yyyy'}}</td>
+                <td>{{obj.WorkingDate}}</td>
                 <td>{{obj.Description}}</td>
                 <td>{{obj.EmployeeName}}</td>
                 <td>{{obj.hours}} : {{obj.minu}}</td>
