--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -76,13 +76,13 @@
         (click)="reportsform(reportsformdata,reportsformdata.form.valid)">Submit</button>
     </div>
 
-    <div class="col-xs-4 col-sm-2 col-md-1 col-lg-1">
+    <div class="col-xs-4 col-sm-2 col-md-1 col-lg-1 marg">
       <button type="reset" class="btn btn-warning" (click)="clearreportsform()">Clear</button>
     </div>
 
-    <div class="form-group form-inline col-md-1">
+    <!-- <div class="form-group form-inline col-md-1">
       <button type="button" class="btn btn-info" (click)="Gettodayrecords()">Today</button>
-    </div>
+    </div> -->
 
     <div class="form-group form-inline col-xs-offset-3 col-lg-offset-0 col-md-2">
       <a class="btn btn-success" (click)="callreports()" [ngClass]="{'exportclass disabled': !reportslength === true}" >Export</a>
