--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -84,7 +84,7 @@
       <button type="button" class="btn btn-info" (click)="Gettodayrecords()">Today</button>
     </div> -->
 
-    <div class="form-group form-inline col-xs-offset-3 col-lg-offset-0 col-md-2">
+    <div class="form-group form-inline col-lg-offset-0 col-xs-3 col-md-2">
       <a class="btn btn-success" (click)="callreports()" [ngClass]="{'exportclass disabled': !reportslength === true}" >Export</a>
   </div>
 
