--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -142,7 +142,7 @@
                 <tr>
                     <td></td>
                     <td style="color: blue;font-weight: 700;">No of Days</td>
-                    <td style="color: red;font-weight: 700;">{{totalhours/8}}</td>
+                    <td style="color: red;font-weight: 700;">{{ (totalhours / 8) + (minutestaken / 60) }}</td>
                     <td></td>
                     <td style="color: blue;font-weight: 700;">Total time</td>
                     <td style="color: red;font-weight: 700;">{{totalhours}} hours/<br> {{minutestaken}} mins</td>
