--- a/src/app/report/report.component.css
+++ b/src/app/report/report.component.css
@@ -1,6 +1,7 @@
 @media screen and (min-device-width: 320px) and (max-device-width: 425px) {
     .mystylecontainer {
         padding: 38px !important;
+        padding-top: 0px !important;
     }
     .formbuttons {
         padding-top: 11px;
